# TradingAgents

./: .cursorIgnore  .env  .env.example  .gitignore  ADVANCED_TOKEN_OPTIMIZATION_STRATEGIES.md  AGGRESSIVE_OPTIMIZATION_PLAN.md  APP_STORE_CHECKLIST.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_PHASE2.sh  CLEANUP_SUMMARY.md  CURRENT_DEPLOYMENT_GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  Dockerfile  ENHANCED_TOKEN_OPTIMIZATION_PLAN.md  FASTAPI_SETUP.md  OPTIMIZATION_RESULTS.md  PHASE2_OPTIMIZATION_RESULTS.md  README.md  SIMPLIFIED_CLI_GUIDE.md  TOKEN_OPTIMIZATION_ARCHITECTURE.md  TOKEN_OPTIMIZATION_SUMMARY.md  TradingAgents_Swift_Integration.swift  TradingAnalysisView.swift  api.py  api_logs.txt  database-setup.yaml  debug_local.sh  deploy-production.sh  deploy.sh  k8s-cluster-setup.md  langgraph-dataplane-values.yaml  langgraph.json  load-test.py  main.py  monitoring-setup.md  nixpacks.toml  requirements.txt  restart_server.sh  run_api.py  (+1 more)
trading-graph-server/: .cursorignore  .env.example  .env.test  .gitignore  .ultra_fast_fundamentals_enabled  =65.0.0  AGGRESSIVE_DEBATOR_FIX_SUMMARY.md  ASYNC_CONTEXT_FIX_SUMMARY.md  BLOCKING_IO_FIX_ATTEMPTS.md  BLOCKING_IO_FIX_SUCCESS.md  COMPREHENSIVE_OPTIMIZATION_PLAN.md  COMPREHENSIVE_OPTIMIZATION_PLAN_V2.md  COMPREHENSIVE_RCA_ANALYSIS.md  CONFIGURATION_ANALYSIS.md  CRITICAL_FIX_PLAN.md  DEBUG_LOCAL_NOVENV_CHANGES.md  DEBUG_LOCAL_NOVENV_FIXES.md  DEBUG_LOCAL_SUCCESS_REPORT.md  DEBUG_SUCCESS_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX_SUMMARY.md  ENHANCED_IMPLEMENTATION_MIGRATION_GUIDE.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  ERIC_CLEANUP_COMMAND_TEST.md  ERROR_FIX_SUMMARY.md  FINAL_SOLUTION_SUMMARY.md  FINAL_STRUCTURE.md  FINAL_SUCCESS_SUMMARY.md  FIX_IMPLEMENTATION_GUIDE.md  LANGGRAPH_DEBUG_GAP_ANALYSIS.md  LANGGRAPH_DEV_FIX_VERIFICATION.md  MERGE_SUMMARY.md  PARALLEL_DISPATCHER_FIX_SUMMARY.md  PERFORMANCE_IMPROVEMENT_ACHIEVED.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_REGRESSION_ANALYSIS.md  PERFORMANCE_VERIFICATION_CHECKLIST.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_NEWS_OPTIMIZATION_COMPLETE.md  (+98 more)
trading-graph-server/.claude/: settings.json
trading-graph-server/claude_doc/: ASYNC_SAFE_COMPLETE_SOLUTION.md  CLAUDE_COMMAND_IMPLEMENTATION.md  CLEANUP_SUMMARY_2025-08-15.md  CONFIGURATION_GUIDE.md  FUNDAMENTALS_ANALYST_FIX_COMPLETE.md  IMPLEMENTATION_TEMPLATES.md  IMPROVEMENT_WORKFLOW.md  PHASE1_RESEARCH_SUMMARY.md  README_ORGANIZATION.md  ULTRATHINK_FREE_FUNDAMENTALS_DATA_SOURCE_ANALYSIS.md  VALIDATION_BEST_PRACTICES.md  architecture_fixes_20250811.md  auto_commit_hook_architecture.md  balanced_agent_prompts_v4.md  complete_async_safe_fix.md  flutter_cleanup_complete_summary.md  implementation_status_report_20250731.md  model_configuration_update.md  task5_cleanup_summary.md  task_completion_analysis.md  trace_analysis_report.md  trace_verification_ultrathink_20250811.md  unified_agent_analysis_and_improvement_plan.md  unified_atomic_implementation_plan_v2.md
trading-graph-server/debug_logs/: api_test_results_20250807_141542.json  debug_report_20250722_111952.md  debug_report_20250722_112734.md  (+303 more)
(+1004 files in other folders)
